@@ -970,6 +970,204 @@ return|return
 name|result
 return|;
 block|}
+specifier|public
+name|String
+name|getHiveConfVar
+parameter_list|(
+name|String
+name|s
+parameter_list|)
+throws|throws
+name|HWIException
+block|{
+name|String
+name|result
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|result
+operator|=
+name|conf
+operator|.
+name|get
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|HWIException
+argument_list|(
+name|ex
+argument_list|)
+throw|;
+block|}
+return|return
+name|result
+return|;
+block|}
+comment|/* 	 * mapred.job.tracker could be host:port or just local 	 * mapred.job.tracker.http.address could be host:port or just host 	 * In some configurations http.address is set to 0.0.0.0 we are combining the two 	 * variables to provide a url to the job tracker WUI if it exists. If hadoop chose 	 * the first available port for the JobTracker HTTP port will can not determine it. 	 */
+specifier|public
+name|String
+name|getJobTrackerURL
+parameter_list|(
+name|String
+name|jobid
+parameter_list|)
+throws|throws
+name|HWIException
+block|{
+name|String
+name|jt
+init|=
+name|this
+operator|.
+name|getHiveConfVar
+argument_list|(
+literal|"mapred.job.tracker"
+argument_list|)
+decl_stmt|;
+name|String
+name|jth
+init|=
+name|this
+operator|.
+name|getHiveConfVar
+argument_list|(
+literal|"mapred.job.tracker.http.address"
+argument_list|)
+decl_stmt|;
+name|String
+index|[]
+name|jtparts
+init|=
+literal|null
+decl_stmt|;
+name|String
+index|[]
+name|jthttpParts
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|jt
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+literal|"local"
+argument_list|)
+condition|)
+block|{
+name|jtparts
+operator|=
+operator|new
+name|String
+index|[
+literal|2
+index|]
+expr_stmt|;
+name|jtparts
+index|[
+literal|0
+index|]
+operator|=
+literal|"local"
+expr_stmt|;
+name|jtparts
+index|[
+literal|1
+index|]
+operator|=
+literal|""
+expr_stmt|;
+block|}
+else|else
+block|{
+name|jtparts
+operator|=
+name|jt
+operator|.
+name|split
+argument_list|(
+literal|":"
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|jth
+operator|.
+name|contains
+argument_list|(
+literal|":"
+argument_list|)
+condition|)
+block|{
+name|jthttpParts
+operator|=
+name|jth
+operator|.
+name|split
+argument_list|(
+literal|":"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|jthttpParts
+operator|=
+operator|new
+name|String
+index|[
+literal|2
+index|]
+expr_stmt|;
+name|jthttpParts
+index|[
+literal|0
+index|]
+operator|=
+name|jth
+expr_stmt|;
+name|jthttpParts
+index|[
+literal|1
+index|]
+operator|=
+literal|""
+expr_stmt|;
+block|}
+return|return
+name|jtparts
+index|[
+literal|0
+index|]
+operator|+
+literal|":"
+operator|+
+name|jthttpParts
+index|[
+literal|1
+index|]
+operator|+
+literal|"/jobdetails.jsp?jobid="
+operator|+
+name|jobid
+operator|+
+literal|"&refresh=30"
+return|;
+block|}
 annotation|@
 name|Override
 comment|/* 	 * HWISessionItem uses a wait() notify() system. If the thread detects conf to 	 * be null, control is transfered to initItem().A status of QUERY_SET causes 	 * control to transfer to the runQuery() method. DESTROY will cause the run 	 * loop to end permanently. 	 */
